--- a/init.morrison.rc
+++ b/init.morrison.rc
@@ -5,7 +5,7 @@ on boot
     # SmartassV2 governor
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 528000
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 122880
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor smartassV2
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor powersave
     #Low Memory Killer
     write /sys/module/lowmemorykiller/parameters/minfree 1536,2048,4096,5120,15360,23040
     # Reboot to recovery
@@ -20,8 +20,8 @@ on boot
     exec rm /data/misc/dhcp/dhcpcd-eth0.pid
     chown wifi wifi /data/misc/wifi/wpa_supplicant.conf
     mkdir /data/misc/dhcp 0770 dhcp dhcp
-    #    chown bluetooth bluetooth /sys/module/board_morrison/parameters/bluetooth_power_on
-    #    chmod 0660 /sys/module/board_morrison/parameters/bluetooth_power_on
+    chown bluetooth bluetooth /sys/module/board_morrison/parameters/bluetooth_power_on
+    chmod 0660 /sys/module/board_morrison/parameters/bluetooth_power_on
     exec chown bluetooth bluetooth /proc/bt_power
     chmod 0666 /proc/bt_power
     mkdir /data/radio 0777 system system
@@ -68,14 +68,13 @@ service touchpad /system/bin/touchpad -a /data/touchpad.log
     oneshot
 
 # FMRadio Service
-# service fmradio /system/bin/fmradioserver
-#     class BT
+service fmradio /system/bin/fmradioserver
+class BT
 
 service dhcpcd_eth0 /system/bin/dhcpcd -ABKL -d eth0
     class WLAN
     #user system #- this makes socket() calls fail with permission denied
     group dhcp
-    disabled
     oneshot
 
 service iprenew_eth0 /system/bin/dhcpcd -n
@@ -87,7 +86,6 @@ service autoip /system/bin/dhcpcd -B -d eth0
     class WLAN
     #user system  #- this makes socket() calls fail with permission denied
     group dhcp
-    disabled
     oneshot
 
 service wpa_supplicant /system/bin/wpa_supplicant -D wext -i eth0 -c /data/misc/wifi/wpa_supplicant.conf
@@ -95,7 +93,6 @@ service wpa_supplicant /system/bin/wpa_supplicant -D wext -i eth0 -c /data/misc/
     #user system - this makes socket() calls fail with permission denied
     socket wpa_eth0 dgram 0660 wifi wifi
     group wifi
-    disabled
     oneshot
     
 # E-compass  daemon
@@ -106,10 +103,10 @@ service akmd2 /system/bin/akmd2 -f /system/etc/akm/akmd_set.cfg
     oneshot
 
 ## TCMD
-#service tcmd /system/bin/tcmd_engine usb0
+service tcmd /system/bin/tcmd_engine usb0
 #    user system - this makes reboot failing
-#    group system inet
-#    class TCMD
+group system inet
+class TCMD
 
 service port_bridge /system/bin/port_bridge /dev/smd0 /dev/ttyHSUSB0
 	user radio
@@ -122,7 +119,6 @@ service btenable /system/xbin/busybox sh /system/bin/btenable.sh
 
 service hciattach /system/bin/hciattach -s 3000000 /dev/ttyMSM0 any 3000000 flow
     group bluetooth net_bt_admin misc
-    disabled
     oneshot
 
 service hcid /system/bin/hcid -s -n -f /etc/bluez/hcid.conf
@@ -132,7 +128,6 @@ service hcid /system/bin/hcid -s -n -f /etc/bluez/hcid.conf
     # init.rc does not yet support applying capabilities, so run as root and
     # let hcid drop uid to bluetooth with the right linux capabilities
     group bluetooth net_bt_admin misc
-    disabled
 
 service fuel_gauge /system/bin/fuel_gauge --all
     class TCMD
@@ -147,15 +142,15 @@ on property:sys.motorola.suspended=1
 on property:sys.motorola.suspended=0
     class_start zygote_services
 
-#on property:sys.motorola.infactory=1
-#    class_start ADB
-#    class_start TCMD
-#    class_start TOOL
-#    class_start ANDROID
-#    class_start MEDIA
-#    class_start BT
-#    class_start WLAN
-#    class_start HW
+on property:sys.motorola.infactory=1
+class_start ADB
+class_start TCMD
+class_start TOOL
+class_start ANDROID
+class_start MEDIA
+class_start BT
+class_start WLAN
+class_start HW
     
 on property:sys.motorola.infactory=2
     class_start ADB
@@ -187,10 +182,10 @@ on property:sys.motorola.infactory=0
     class_start TCMD
 
 on property:persist.factorytest=1
-    stop zygote
+    start zygote
 
 on property:persist.factorytest=2
-    stop zygote
+    start zygote
 
 on property:persist.factorytest=0
     start zygote
